examples/units/m12_5_arith_err_currency.err.expected
error: type mismatch in arithmetic operator '+'
  --> examples/units/m12_5_arith_err_currency.kai:9:17
    |
  9 |   let bad = usd + eur
    |                 ^
  = note: expected: Real<USD>
  = note: found:    Real<EUR>
warning: unused binding `bad`
  --> examples/units/m12_5_arith_err_currency.kai:9:7
    |
  9 |   let bad = usd + eur
    |       ^
  = help: prefix with `_` to mark as intentionally unused
