examples/units/m12_5_arith_err_currency.kai
# m12.5: adding USD and EUR must be a compile-time error.

unit USD
unit EUR

pub fn main() : Unit  / Console = {
  let usd : Real<USD> = 1.0<USD>
  let eur : Real<EUR> = 1.0<EUR>
  let bad = usd + eur
  print("never reached")
}
